infra/k8s/overlays/dev/api-gateway-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/kis-nexus/api-gateway:dev-latest
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 256Mi
